Changed format for home & added links!

--- a/mov_rec/app/views/pages/home.html.erb
+++ b/mov_rec/app/views/pages/home.html.erb
@@ -57,53 +57,15 @@
 
 <h4>Directors our actor has worked with!</h4>
 
-<table>
-  <thead>
-    <tr>
-      <th>Picture</th>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @directors.each do |director| %>
-      <tr>
-        <% if director.picture.blank? %>
-          <td><img src="<%= director.picture %>" style="width: 75px; visibility: hidden"></td>
-        <% else %>
-          <td><img src="<%= director.picture %>" style="width: 75px"></td>
-        <% end %>
-        <td><%= director.first_name %> <%= director.last_name %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% @directors.each do |director| %>
+  <a href="/directors/<%= director.id %>"><%= director.first_name %> <%= director.last_name %></a><br>
+<% end %>
 
 <h4>Studios our actor has worked with!</h4>
 
-<table>
-  <thead>
-    <tr>
-      <th>Picture</th>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @studios.each do |studio| %>
-      <tr>
-        <% if studio.picture.blank? %>
-          <td><img src="<%= studio.picture %>" style="width: 75px; visibility: hidden"></td>
-        <% else %>
-          <td><img src="<%= studio.picture %>" style="width: 75px"></td>
-        <% end %>
-        <td><%= studio.studio_name %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% @studios.each do |studio| %>
+  <a href="/studios/<%= studio.id %>"><%= studio.studio_name %></a><br>
+<% end %>
 
 <br>
 <br>
