--- a/mov_rec/app/views/topics/show.html.erb
+++ b/mov_rec/app/views/topics/show.html.erb
@@ -62,37 +62,31 @@
 	<tr>
 	  <th></th>
 	  <th>Movie Name</th>
-	  <th>Description</th>
 	  <th>Date released</th>
-	  <th>Duration</th>
-	  <th>Language</th>
-	  <th>Subtitles</th>
-	  <th>Dubbed</th>
-	  <th>Country</th>
-	  <th>Age rating</th>
+	  <th>Directors</th>
+	  <th>Studios</th>
 	  <th colspan="3"></th>
 	</tr>
   </thead>
 
   <tbody>
 	<% @movies.each do |movie| %>
+      <% @directors = Director.joins(:directs).where(directs: { movie_id: movie.id }) %>
+      <% @studios = Studio.joins(:sponsors).where(sponsors: { movie_id: movie.id }) %>
 	  <tr>
 		<td><img src="<%= movie.poster %>" style="width: 75px"></td>
 		<td><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a></td>
-		<td id="td1"><%= movie.description %></td>
 		<td><%= movie.date_released %></td>
 		<td>
-		  <% if movie.duration.hour == 0 %>
-		  	<%= movie.duration.strftime('%Mm') %>
-		  <% else %>
-			<%= movie.duration.strftime('%kh %Mm') %>
+		  <% @directors.each do |director| %>
+		    <a href="/directors/<%= director.id %>"><%= director.first_name %> <%= director.last_name %></a><br>
 		  <% end %>
 		</td>
-		<td><%= movie.language %></td>
-		<td><%= movie.subtitles %></td>
-		<td><%= movie.dubbed %></td>
-		<td><%= movie.country %></td>
-		<td><%= movie.age_rating %></td>
+		<td>
+		  <% @studios.each do |studio| %>
+		    <a href="/studios/<%= studio.id %>"><%= studio.studio_name %></a><br>
+		  <% end %>
+		</td>
 	  </tr>
 	<% end %>
   </tbody>
