--- a/mov_rec/app/views/topics/index.html.erb
+++ b/mov_rec/app/views/topics/index.html.erb
@@ -9,15 +9,30 @@
     <tr>
       <th>Genre</th>
       <th>Top Movie</th>
+      <th>Average Rating</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @topics.each do |topic| %>
+      <% @topmovie = Movie.
+                      select("movie_ratings.movie_id, movie_name, round(avg(user_rating), 1) as score").
+                      joins(:movie_ratings, :movie_topics).
+                      where(movie_topics: { topic_id: topic.id }).
+                      group(['movie_name', 'movie_ratings.movie_id']).
+                      order('score DESC').
+                      take %>
       <tr>
         <td><a href="/topics/<%= topic.id %>"><%= topic.genre_name %></a></td>
-        <td></td>
+
+        <% if @topmovie != nil %>
+          <td><a href="/movies/<%= @topmovie.movie_id %>"><%= @topmovie.movie_name %></a></td>
+          <td><%= @topmovie.score %></td>
+        <% else %>
+          <td></td>
+          <td></td>
+        <% end %>
 
         <% if current_user.user_type_id == @admin.id  %>
           <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
