--- a/mov_rec/app/views/pages/home.html.erb
+++ b/mov_rec/app/views/pages/home.html.erb
@@ -142,3 +142,67 @@
   <strong>Gender:</strong>
   <%= @couple2.gender %>
 </p>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<h2>Top Ten Movies!</h2>
+
+<% @topmovies = Movie.
+                  select("movie_id, movie_name, poster, description, country, date_released, language, subtitles, dubbed, age_rating, round(avg(user_rating), 1) as score").
+                  joins(:movie_ratings).
+                  group(['movie_name', 'poster', 'movie_id', 'description', 'country', 'date_released', 'language', 'subtitles', 'dubbed', 'age_rating']).
+                  order('score DESC').
+                  take(10) %>
+
+<table>
+  <thead>
+    <tr>
+      <th></th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Country</th>
+      <th>Date Released</th>
+      <th>Language</th>
+      <th>Subtitles</th>
+      <th>Dubbed</th>
+      <th>Age Rating</th>
+      <th>Genres</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @topmovies.each do |topmovie| %>
+      <% @genres = Topic.joins(:movie_topics).where(movie_topics: { movie_id: topmovie.movie_id }) %>
+      <tr>
+        <% if topmovie.poster.blank? %>
+          <td><img src="<%= topmovie.poster %>" style="width: 75px; visibility: hidden"></td>
+        <% else %>
+          <td><img src="<%= topmovie.poster %>" style="width: 75px"></td>
+        <% end %>
+        <td><a href="/movies/<%= topmovie.movie_id %>"><%= topmovie.movie_name %></a></td>
+        <td><%= topmovie.description %></td>
+        <td><%= topmovie.country %></td>
+        <td><%= topmovie.date_released %></td>
+        <td><%= topmovie.language %></td>
+        <td><%= topmovie.subtitles %></td>
+        <td><%= topmovie.dubbed %></td>
+        <td><%= topmovie.age_rating %></td>
+        <td>
+          <% @genres.each do |genre| %>
+            <a href="/topics/<%= genre.id %>"><%= genre.genre_name %></a><br>
+          <% end %>
+        <td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
