--- a/mov_rec/app/assets/stylesheets/scaffolds.scss
+++ b/mov_rec/app/assets/stylesheets/scaffolds.scss
@@ -17,6 +17,12 @@ p, ol, ul, td {
   padding: 5px;
 }
 
+table tr:nth-child(odd) td{
+  background-color: #F1F1F1;
+}
+table tr:nth-child(even) td{
+  background-color: white;
+}
 
 
 th {
@@ -48,8 +54,8 @@ a {
   }
 
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: black;
+    background-color: none;
   }
 }
 
