--- a/mov_rec/app/views/pages/home.html.erb
+++ b/mov_rec/app/views/pages/home.html.erb
@@ -213,3 +213,52 @@
     <% end %>
   </tbody>
 </table>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<h2>Top Ten Users!</h2>
+
+<% @topusers = User.
+                select("user_id, email, picture, round(avg(user_rating), 1) as avg").
+                joins(:movie_ratings).
+                group(['email', 'user_id', 'picture']).
+                order('avg DESC').
+                take(10) %>
+
+<table>
+  <thead>
+    <tr>
+      <th>Rank</th>
+      <th>Avg Rating</th>
+      <th></th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <% i = 0 %>
+
+  <tbody>
+    <% @topusers.each do |topuser| %>
+      <tr>
+        <% i = i + 1 %>
+        <td><%= i %></td>
+        <td><%= topuser.avg %></td>
+        <% if topuser.picture.blank? %>
+          <td><img src="<%= topuser.picture %>" style="width: 75px; visibility: hidden"></td>
+        <% else %>
+          <td><img src="<%= topuser.picture %>" style="width: 75px"></td>
+        <% end %>
+        <td><a href="/users/<%= topuser.user_id %>"><%= topuser.email %></a></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
