--- a/mov_rec/app/views/pages/home.html.erb
+++ b/mov_rec/app/views/pages/home.html.erb
@@ -225,6 +225,103 @@
 <br>
 <br>
 
+<h2>Unwatched movies since last year!</h2>
+
+<% @unwatchedmovies = Movie.
+                        joins("LEFT JOIN movie_ratings on movies.id = movie_ratings.movie_id").
+                        where("movie_ratings.updated_at < '2016-01-01' OR movie_ratings.movie_id is null") %>
+
+<table>
+  <thead>
+    <tr>
+      <th></th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Country</th>
+      <th>Date Released</th>
+      <th>Language</th>
+      <th>Subtitles</th>
+      <th>Dubbed</th>
+      <th>Age Rating</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <% i = 0 %>
+
+  <tbody>
+    <% @unwatchedmovies.each do |unwatchedmovie| %>
+      <tr>
+        <% if unwatchedmovie.poster.blank? %>
+          <td><img src="<%= unwatchedmovie.poster %>" style="width: 75px; visibility: hidden"></td>
+        <% else %>
+          <td><img src="<%= unwatchedmovie.poster %>" style="width: 75px"></td>
+        <% end %>
+        <td><a href="/movies/<%= unwatchedmovie.id %>"><%= unwatchedmovie.movie_name %></a></td>
+        <td><%= unwatchedmovie.description %></td>
+        <td><%= unwatchedmovie.country %></td>
+        <td><%= unwatchedmovie.date_released %></td>
+        <td><%= unwatchedmovie.language %></td>
+        <td><%= unwatchedmovie.subtitles %></td>
+        <td><%= unwatchedmovie.dubbed %></td>
+        <td><%= unwatchedmovie.age_rating %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<h2>List of Genres in Order of Popularity!</h2>
+
+<% @popgenres = Topic.
+                select("topics.id as id, genre_name, count(movie_ratings.id) as popular").
+                joins("LEFT JOIN movie_topics ON topics.id = movie_topics.topic_id", "LEFT JOIN movie_ratings ON movie_topics.movie_id = movie_ratings.movie_id").
+                group(['genre_name', 'id']).
+                order('popular DESC') %>
+
+<table>
+  <thead>
+    <tr>
+      <th>Times Watched</th>
+      <th>Genres</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <% i = 0 %>
+
+  <tbody>
+    <% @popgenres.each do |popgenre| %>
+      <tr>
+        <% i = i + 1 %>
+        <td><%= popgenre.popular %></td>
+        <td><a href="/topics/<%= popgenre.id %>"><%= popgenre.genre_name %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <h2>Top Ten Users!</h2>
 
 <% @topusers = User.
