--- a/mov_rec/app/views/directors/show.html.erb
+++ b/mov_rec/app/views/directors/show.html.erb
@@ -1,89 +1,67 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-<br />
-<% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
-  <%= link_to 'Edit', edit_director_path(@director) %> |
-  <%= link_to 'Destroy', @director, method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<div style="width: 1000px; margin: auto; position: center; border-top: 2px black solid">
 
-</p>
-<div>
-  <% if @director.picture.blank? %>
-      <img src="https://images-na.ssl-images-amazon.com/images/G/01/IMDbPro/images/default_name._V142442227_SY215_CR34,0,146,215_.png" style="width: 200px; float:left; padding: 5px">
-  <% else %>
-       <img src="<%= @director.picture %>" style="width: 200px; float:left; padding: 5px">
+  <br>
+  <% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
+    <%= link_to 'Edit', edit_director_path(@director) %> |
+    <%= link_to 'Destroy', @director, method: :delete, data: { confirm: 'Are you sure?' } %>
   <% end %>
 
-<div style="padding: 5px">
+  <h1 style="text-align: center; border-bottom: 2px black solid; padding-bottom: 10px"><%= @director.first_name %> <%= @director.last_name %></h1>
 
-<p>
-  <strong>First name:</strong>
-  <%= @director.first_name %>
-</p>
+  <br>
 
-<p>
-  <strong>Last name:</strong>
-  <%= @director.last_name %>
-</p>
-
-<p>
-  <strong>Place of birth:</strong>
-  <%= @director.place_of_birth %>
-</p>
-
-<p>
-  <strong>Date of birth:</strong>
-  <%= @director.date_of_birth %>
-</p>
-
-<p>
-  <strong>Genre:</strong>
-  <%= @director.gender %>
-</p>
-
-</div>
-</div>
-
-<% @movies = Movie.joins(:directs).where(directs: { director_id: @director.id }).order('movie_name ASC') %>
-
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Movie Name</th>
-      <th>Description</th>
-      <th>Date released</th>
-      <th>Duration</th>
-      <th>Language</th>
-      <th>Subtitles</th>
-      <th>Dubbed</th>
-      <th>Country</th>
-      <th>Age rating</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @movies.each do |movie| %>
-      <tr>
-        <td><img src="<%= movie.poster %>" style="width: 75px"></td>
-        <td><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a></td>
-        <td><%= movie.description %></td>
-        <td><%= movie.date_released %></td>
-        <td>
-          <% if movie.duration.hour == 0 %>
-          <%= movie.duration.strftime('%Mm') %>
-          <% else %>
-          <%= movie.duration.strftime('%kh %Mm') %>
-          <% end %>
-        </td>
-        <td><%= movie.language %></td>
-        <td><%= movie.subtitles %></td>
-        <td><%= movie.dubbed %></td>
-        <td><%= movie.country %></td>
-        <td><%= movie.age_rating %></td>
-      </tr>
+  <div style="display: flex; padding-bottom: 20px; border-bottom: 2px solid black">
+    <div style="float: left; display: inline-block; flex: 1; padding: 10px;">
+      <% if @director.picture.blank? %>
+        <img src="https://images-na.ssl-images-amazon.com/images/G/01/IMDbPro/images/default_name._V142442227_SY215_CR34,0,146,215_.png" style="width: 350px; float:right; border: solid grey">
+    <% else %>
+         <img src="<%= @director.picture %>" style="width: 350px; float: right; border: solid grey">
     <% end %>
-  </tbody>
-</table>
+    </div>
+
+    <div style="float: left; display: inline-block; flex: 1; padding: 10px;">
+      <br>
+      <p>
+        <strong>Date of birth:</strong>
+        <%= @director.date_of_birth %>
+      </p>
+
+      <p>
+        <strong>Place of birth:</strong>
+        <%= @director.place_of_birth %>
+      </p>
+
+      <p>
+        <strong>Gender:</strong>
+        <% if @director.gender == 'M' %>
+          Male
+        <% else %>
+          Female
+        <% end %>
+      </p>
+    </div>
+  </div>
+
+  <div style="text-align: center; border-bottom: 2px black solid; margin-bottom: 20px; padding-bottom: 10px">
+
+    <h2 style="text-align: center"><span style="border-bottom: .5px black solid">Movies</span></h2>
+
+    <% @movies = Movie.joins(:directs).where(directs: { director_id: @director.id }).order('movie_name ASC') %>
+
+    <% @movies.each do |movie| %>
+
+    <div style="display: inline-block; padding: 10px">
+      <a href="/movies/<%= movie.id %>">
+        <img src="<%= movie.poster %>" style="width: 200px; padding: 10px; padding-bottom: 0px">
+        <p><%= movie.movie_name %></p>
+      </a>
+        <p>
+          <b>Date: </b>
+          <%= movie.date_released %>
+        </p>
+    </div>
+    <% end %>
+  </div>
+</div>
