--- a/mov_rec/app/views/pages/home.html.erb
+++ b/mov_rec/app/views/pages/home.html.erb
@@ -3,6 +3,56 @@
   
 </p>
 
+<h2>Recommended Movies Based on Genres You Like!</h2>
+
+<% @suggestedmovies = Movie.
+                      select("movies.id as id1, movies.movie_name as name, topics.id as genre_id, genre_name, email").
+                      joins("LEFT JOIN (
+                              SELECT m2.id as id2, m2.movie_name
+                              FROM movies m2
+                              INNER JOIN movie_ratings ON m2.id = movie_ratings.movie_id
+                              INNER JOIN profiles ON movie_ratings.profile_id = profiles.id
+                              INNER JOIN users ON profiles.user_id = users.id
+                              WHERE users.email = 'user1@movie.com'
+                            ) as watched ON movies.id = watched.id2", "INNER JOIN movie_topics ON movies.id = movie_topics.movie_id",
+                            "INNER JOIN topics ON movie_topics.topic_id = topics.id",
+                            "INNER JOIN likes_topics ON topics.id = likes_topics.topic_id",
+                            "INNER JOIN profiles ON likes_topics.profile_id = profiles.id",
+                            "INNER JOIN users ON profiles.user_id = users.id").
+                      where("watched.id2 IS NULL AND users.email = 'user1@movie.com'").
+                      order('genre_name').
+                      distinct %>
+
+<table>
+  <thead>
+    <tr>
+      <th>Movie</th>
+      <th>Because You like</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @suggestedmovies.each do |suggestedmovie| %>
+      <tr>
+        <td><a href="/movies/<%= suggestedmovie.id1 %>"><%= suggestedmovie.name %></td>
+        <td><a href="/topics/<%= suggestedmovie.genre_id %>"><%= suggestedmovie.genre_name %></a></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <h2>Feature Actor!</h2>
 
 <% @factor = MovieCast.
@@ -305,7 +355,7 @@
       <tr>
         <% i = i + 1 %>
         <td><%= popgenre.popular %></td>
-        <td><a href="/topics/<%= popgenre.id %>"><%= popgenre.genre_name %></td>
+        <td><a href="/topics/<%= popgenre.id %>"><%= popgenre.genre_name %></a></td>
       </tr>
     <% end %>
   </tbody>
