--- a/mov_rec/app/views/directors/index.html.erb
+++ b/mov_rec/app/views/directors/index.html.erb
@@ -4,10 +4,10 @@
 
 <body style="text-align: center">
 
-<h1>Listing Directors</h1>
+<h1 style="border-bottom: 2px solid black; padding-bottom: 10px">Listing Directors</h1>
 
 <% if current_user.user_type_id == @admin.id  %>
-  <%= link_to 'New Director', new_director_path %>
+  <%= link_to '- New Director -', new_director_path %>
 <% end %>
 <br>
 
