--- a/mov_rec/app/views/directors/show.html.erb
+++ b/mov_rec/app/views/directors/show.html.erb
@@ -52,7 +52,7 @@
 
     <% @movies.each do |movie| %>
 
-    <div style="display: inline-block; padding: 10px">
+    <div style="display: inline-block; padding: 10px; width: 220px">
       <a href="/movies/<%= movie.id %>">
         <img src="<%= movie.poster %>" style="width: 200px; padding: 10px; padding-bottom: 0px">
         <p><%= movie.movie_name %></p>
