--- a/mov_rec/app/views/movies/index.html.erb
+++ b/mov_rec/app/views/movies/index.html.erb
@@ -4,10 +4,11 @@
 
 <body style="text-align: center">
 
-<h1>Listing Movies</h1>
+<h1 style="border-bottom: 2px solid black; padding-bottom: 10px">Listing Movies</h1>
+
 
 <% if current_user.user_type_id == @admin.id  %>
-  <%= link_to 'New Movie', new_movie_path %>
+  <%= link_to '- New Movie -', new_movie_path %>
 <% end %>
 <br>
 
@@ -29,5 +30,6 @@
 </div>
 <% end %>
 <% end %>
+
 
 </body>
