--- a/mov_rec/app/views/studios/show.html.erb
+++ b/mov_rec/app/views/studios/show.html.erb
@@ -1,63 +1,53 @@
 <p id="notice"><%= notice %></p>
 
-<% unless @studio.picture.blank? %>
-	<img src="<%= @studio.picture %>" style="width: 300px; float: left; padding: 5px">
-<% end %>
-<p>
-  <strong>Studio name:</strong>
-  <%= @studio.studio_name %>
-</p>
+<div style="width: 1000px; margin: auto; position: center; border-top: 2px black solid">
 
-<p>
-  <strong>Country:</strong>
-  <%= @studio.country %>
-</p>
-
-<% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
-  <%= link_to 'Edit', edit_studio_path(@studio) %> |
-<% end %>
-
-<%= link_to 'Back', studios_path %>
-
-<% @movies = Movie.joins(:sponsors).where(sponsors: { studio_id: @studio.id }).order('movie_name ASC') %>
-
-<table>
-  <thead>
-	<tr>
-	  <th></th>
-	  <th>Movie Name</th>
-	  <th>Description</th>
-	  <th>Date released</th>
-	  <th>Duration</th>
-	  <th>Language</th>
-	  <th>Subtitles</th>
-	  <th>Dubbed</th>
-	  <th>Country</th>
-	  <th>Age rating</th>
-	  <th colspan="3"></th>
-	</tr>
-  </thead>
-
-  <tbody>
-	<% @movies.each do |movie| %>
-	  <tr>
-		<td><img src="<%= movie.poster %>" style="width: 75px"></td>
-		<td><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a></td>
-		<td><%= movie.description %></td>
-		<td><%= movie.date_released %></td>
-		<td>
-		  <% if movie.duration.hour == 0 %>
-			<%= movie.duration.strftime('%Mm') %>
-		  <% else %>
-			<%= movie.duration.strftime('%kh %Mm') %>
-		  <% end %>
-		</td>
-		<td><%= movie.language %></td>
-		<td><%= movie.subtitles %></td>
-		<td><%= movie.dubbed %></td>
-		<td><%= movie.country %></td>
-		<td><%= movie.age_rating %></td>
-	  </tr>
+  <br>
+	<% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
+	  <%= link_to 'Edit', edit_studio_path(@studio) %>
 	<% end %>
-  </tbody>
-</table>
+
+	<h1 style="text-align: center; border-bottom: 2px black solid; padding-bottom: 10px"><%= @studio.studio_name %></h1>
+
+	<br>
+
+	<div style="display: flex; padding-bottom: 20px; border-bottom: 2px solid black">
+		<div style="float: left; display: inline-block; flex: 1; padding: 10px;">
+				 <img src="<%= @studio.picture %>" style="width: 350px; float: right; border: solid grey">
+		</div>
+
+		<div style="float: left; display: inline-block; flex: 1; padding: 10px;">
+			<br>
+			<p>
+			  <strong>Studio name:</strong>
+			  <%= @studio.studio_name %>
+			</p>
+
+			<p>
+			  <strong>Country:</strong>
+			  <%= @studio.country %>
+			</p>
+		</div>
+	</div>
+
+	<div style="text-align: center; border-bottom: 2px black solid; margin-bottom: 20px; padding-bottom: 10px">
+
+    <h2 style="text-align: center"><span style="border-bottom: .5px black solid">Movies Sponsored</span></h2>
+
+		<% @movies = Movie.joins(:sponsors).where(sponsors: { studio_id: @studio.id }).order('movie_name ASC') %>
+
+		<% @movies.each do |movie| %>
+
+		<div style="display: inline-block; padding: 10px; width: 220px">
+      <a href="/movies/<%= movie.id %>">
+        <img src="<%= movie.poster %>" style="width: 200px; padding: 10px; padding-bottom: 0px">
+        <p><%= movie.movie_name %></p>
+      </a>
+        <p>
+          <b>Date: </b>
+          <%= movie.date_released %>
+        </p>
+    </div>
+    <% end %>
+  </div>
+</div>
