--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -105,7 +105,7 @@
     <iframe width="800" height="450" src="//youtube.com/embed/<%= @movie.trailer %>" frameborder="0" allowfullscreen></iframe>
   </div>
 
-  <div style="text-align: center">
+  <div style="text-align: center; vertical-align: top">
 
       <h2 style="text-align: center"><span style="border-bottom: .5px black solid">Directors</span></h2>
 
@@ -130,7 +130,7 @@
       <% @roles = Role.joins(:actor_roles, :movie_roles).where(actor_roles: { actor_id: actor.id }, movie_roles: { movie_id: @movie.id}) %>
       <% @type = CastingType.joins(:movie_casts).where(movie_casts: { movie_id: @movie.id, actor_id: actor.id }).take %>
 
-        <div style="display: inline-block; padding: 10px">
+        <div style="display: inline-block; padding: 10px; width: 220px; vertical-align: top">
            <a href="/actors/<%= actor.id %>">
              <img src="<%= actor.picture %>" style="width: 200px; padding: 10px; padding-bottom: 0px">
              <p><%= actor.first_name %> <%= actor.last_name %></p>
