--- a/mov_rec/app/views/studios/show.html.erb
+++ b/mov_rec/app/views/studios/show.html.erb
@@ -4,7 +4,8 @@
 
   <br>
 	<% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
-	  <%= link_to 'Edit', edit_studio_path(@studio) %>
+	  <%= link_to 'Edit', edit_studio_path(@studio) %> |
+    <%= link_to 'Destroy', @studio, method: :delete, data: { confirm: 'Are you sure?' } %>
 	<% end %>
 
 	<h1 style="text-align: center; border-bottom: 2px black solid; padding-bottom: 10px"><%= @studio.studio_name %></h1>
@@ -38,7 +39,7 @@
 
 		<% @movies.each do |movie| %>
 
-		<div style="display: inline-block; padding: 10px; width: 220px">
+		<div style="display: inline-block; padding: 10px; vertical-align: top; width: 220px">
       <a href="/movies/<%= movie.id %>">
         <img src="<%= movie.poster %>" style="width: 200px; padding: 10px; padding-bottom: 0px">
         <p><%= movie.movie_name %></p>
