--- a/mov_rec/app/views/topics/index.html.erb
+++ b/mov_rec/app/views/topics/index.html.erb
@@ -11,13 +11,12 @@
   <%= link_to '- New Topic -', new_topic_path %>
 <% end %>
 
-
-<table style="margin: auto; margin-top: 20px">
+<table style="margin: auto; margin-top: 20px; width: 850px; align: center">
   <thead>
     <tr>
-      <th>Genre</th>
-      <th>Top Movie</th>
-      <th>Average Rating</th>
+      <th style="font-size: 18px">Genre</th>
+      <th style="font-size: 18px">Top Movie</th>
+      <th style="font-size: 18px">Average Rating</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -31,12 +30,12 @@
                       group(['movie_name', 'movie_ratings.movie_id']).
                       order('score DESC').
                       take %>
-      <tr>
-        <td><a href="/topics/<%= topic.id %>"><%= topic.genre_name %></a></td>
+      <tr style="height: 200%">
+        <td style="font-size: 15px; width: 400px; height: 40px"><a href="/topics/<%= topic.id %>"><%= topic.genre_name %></a></td>
 
         <% if @topmovie != nil %>
-          <td><a href="/movies/<%= @topmovie.movie_id %>"><%= @topmovie.movie_name %></a></td>
-          <td><%= @topmovie.score %></td>
+          <td style="font-size: 15px; width: 400px; height: 40px"><a href="/movies/<%= @topmovie.movie_id %>"><%= @topmovie.movie_name %></a></td>
+          <td style="font-size: 15px; width: 400px; height: 40px"><%= @topmovie.score %></td>
         <% else %>
           <td></td>
           <td></td>
